# night-fear-game

./: .gitignore  .project  Application.cpp  Application.h  Atlas.cpp  Atlas.h  Behaviour.h  CMakeFile.txt  CMakeLists.txt  Camera.cpp  Camera2D.cpp  Camera2D.h  GameObject.cpp  GameObject.h  Gizmos.cpp  LICENSE  MainMenu.h  Mathf.h  NavMesh.cpp  NavMesh.h  Object.cpp  Object.h  ObjectParser.cpp  Player.h  Program.cpp  README.md  ResourceManager.h  Spotlight.cpp  SpriteRenderer.cpp  Terrain2D.cpp  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vec2.cpp  Vec2.h  controls.h  font.cpp  font.h  framework.h  (+8 more)
Sources/: Application.cpp  Camera.cpp  Camera2D.cpp  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  LevelEntity.cpp  MainMenu.cpp  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vec2.cpp  controls.cpp  font.cpp  framework_ex.h  main.cpp  scene.h  sysInfo.cpp  sysInfo.h  ui.cpp  ui.h
build-nightfear-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-nightfear-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-3bd08b039550e45b0d19.json  cmakeFiles-v1-b62caa161977aacbee2b.json  codemodel-v2-71fef7d8555c2d6c265a.json  index-2021-02-28T09-26-53-0356.json  target-nightfear-Debug-44592a2371c6c95083d9.json
cmake/: functions.cmake  target.cmake
install/: config.cfg
install/data/gfx/interface/: fontprop.j
install/data/levels/: level1.map
install/data/loader/: graphics  textures.conf
install/data/locale/ru_RU/: levels.txt  locale_levels.txt
install/data/textures/: zombie.j
install/data/textures/titles/: zombie.tmx
source/: Application.cpp  Application.h  Atlas.cpp  Atlas.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Color.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Gizmos.cpp  Gizmos.h  LevelEntity.h  Light.cpp  Light.h  MainMenu.cpp  MainMenu.h  Mathf.cpp  Mathf.h  NavMesh.cpp  NavMesh.h  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Particle.h  Player.cpp  Player.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Spotlight.cpp  Spotlight.h  (+35 more)
source/extension/: linked_list.h
src/: PathMover.cpp  PathMover.h  PathMoverMenu.cpp  PathMoverMenu.h  main.cpp
